# django-snacks

./: README.md  db.sqlite3  pyproject.toml
django_snacks_project/: settings.py  urls.py
snacks_app/: tests.py  urls.py  views.py
templates/: about.html  base.html  home.html  snacks.html
